tests/c/internal/negative_case/bad_struct_incomplete_object.c
// Expected: compile fail (object of incomplete struct type)
struct S;
struct S obj;

int main() {
  return 0;
}
